--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
